Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17161

fortify_memset_chk faling OBD_FREE_PTR()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Build fails with:

      In file included from /usr/src/linux-headers-6.1.0-10-common/include/linux/string.h:253,
                       from /usr/src/linux-headers-6.1.0-10-common/include/linux/bitmap.h:11,
                       from /usr/src/linux-headers-6.1.0-10-common/include/linux/cpumask.h:12,
                       from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/cpumask.h:5,
                       from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/msr.h:11,
                       from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/processor.h:22,
                       from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/cpufeature.h:5,
                       from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/thread_info.h:53,
                       from /usr/src/linux-headers-6.1.0-10-common/include/linux/thread_info.h:60,
                       from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/preempt.h:7,
                       from /usr/src/linux-headers-6.1.0-10-common/include/linux/preempt.h:78,
                       from /usr/src/linux-headers-6.1.0-10-common/include/linux/percpu.h:6,
                       from /usr/src/linux-headers-6.1.0-10-common/include/linux/prandom.h:12,
                       from /usr/src/linux-headers-6.1.0-10-common/include/linux/random.h:172,
                       from /home/shaun/lustre-release/lustre/obdclass/obd_mount.c:43:
      In function ‘fortify_memset_chk’,
          inlined from ‘lustre_free_lsi’ at /home/shaun/lustre-release/lustre/obdclass/obd_mount.c:669:2,
          inlined from ‘lustre_put_lsi_free’ at /home/shaun/lustre-release/lustre/obdclass/obd_mount.c:687:2,
          inlined from ‘kref_put’ at /usr/src/linux-headers-6.1.0-10-common/include/linux/kref.h:65:3,
          inlined from ‘lustre_put_lsi’ at /home/shaun/lustre-release/lustre/obdclass/obd_mount.c:703:6:
      /usr/src/linux-headers-6.1.0-10-common/include/linux/fortify-string.h:314:25: error: call to ‘__write_overflow_field’ declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror=attribute-warning]
        314 |                         __write_overflow_field(p_size_field, size);
            |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        CC [M]  /home/shaun/lustre-release/lustre/ptlrpc/batch.o
      

            stancheff Shaun Tancheff
            stancheff Shaun Tancheff
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: